better resolution for list of marketplaces

--- a/.bookrc
+++ b/.bookrc
@@ -1,5 +1,5 @@
 {
-  "name": "a-guide-to-marketplaces",
+  "name": " A Guide to Marketplaces",
   "type": "text",
   "has_page_numbers": false,
   "mode": {
